CRYPT-6: Add a basic attack combo

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/James Osborne/Documents/Projects/IntoTheCrypt/dist/IntoTheCrypt.exe"
+export_path="C:/Users/James Osborne/Documents/Projects/IntoTheCrypt/dist/Into the Crypt Windows/IntoTheCrypt.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
